--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-title: Alek vasek
+title: Alek V.
 bio: Hi, My name is Alek. On the weekends, you will catch me tinkering with my Raspberry Pis, rehearsing Bach on my Guitar, or designing the future with Fusion 360.
 
 # if it's an external image, update below for true
