--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ email: alekvasek@icloud.com
 
 authors:
   johndoe:
-    name: Alek vasek
+    name: Alek V.
     bio: Hi, My name is Alek. On the weekends, you will catch me tinkering with my Raspberry Pis, rehearsing Bach on my Guitar, or designing the future with Fusion 360.
     external-image: true
     picture: icon.png
