--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ permalink: /:title/
 #linkedin: mylinkedin
 github: alekthegenius
 email: alekvasek@icloud.com
+instructables: alekthegenius
 
 authors:
   alekv:
