--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ picture: icon.png
 
 # your site color theme, true for dark theme, 
 # false to light theme, auto to switch with system.
-dark-theme: auto
+dark-theme: false
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
