--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ permalink: /:title/
 github: alekthegenius
 email: alekvasek@icloud.com
 instructables: alekthegenius
+quizlet: alekthegenius
 
 authors:
   alekv:
